Project

General

Profile

Actions

Bug #49418

closed

[rbd-mirror] ImageReplayer.cc: 699: FAILED ceph_assert(m_update_status_task != nullptr)

Added by Mykola Golub about 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

/ceph/teuthology-archive/trociny-2021-02-21_11:18:03-rbd-wip-mgolub-testing-distro-basic-smithi/5900253/remote/smithi152/log/cluster2-client.mirror.0.94710.log.gz:

2021-02-21T12:14:43.752+0000 7fb212d82700 -1 /build/ceph-17.0.0-971-gf57f6ff0/src/tools/rbd_mirror/ImageReplayer.cc: In function 'rbd::mirror::ImageReplayer<ImageCtxT>::handle_update_mirror_
image_replay_status(int)::<lambda(int)> [with I = librbd::ImageCtx]' thread 7fb212d82700 time 2021-02-21T12:14:43.732827+0000
/build/ceph-17.0.0-971-gf57f6ff0/src/tools/rbd_mirror/ImageReplayer.cc: 699: FAILED ceph_assert(m_update_status_task != nullptr)

 ceph version 17.0.0-971-gf57f6ff0 (f57f6ff08fac47da951bb8b6ee6407b3af5e5e37) quincy (dev)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x14b) [0x7fb21ac2ac2d]
 2: (ceph::__ceph_assertf_fail(char const*, char const*, int, char const*, char const*, ...)+0) [0x7fb21ac2ae08]
 3: (LambdaContext<rbd::mirror::ImageReplayer<librbd::ImageCtx>::handle_update_mirror_image_replay_status(int)::{lambda(int)#2}>::finish(int)+0x1ae) [0x55af467f907e]
 4: (Context::complete(int)+0x9) [0x55af46780499]
 5: (boost::asio::detail::completion_handler<boost::asio::detail::work_dispatcher<librbd::asio::ContextWQ::queue(Context*, int)::{lambda()#1}> >::do_complete(void*, boost::asio::detail::scheduler_operation*, boost::system::error_code const&, unsigned long)+0x56) [0x55af467808f6]
 6: (boost::asio::detail::strand_service::do_complete(void*, boost::asio::detail::scheduler_operation*, boost::system::error_code const&, unsigned long)+0x7d) [0x55af468e764d]
 7: /usr/lib/librados.so.2(+0xb67bf) [0x7fb22407c7bf]
 8: /usr/lib/librados.so.2(+0xb6af6) [0x7fb22407caf6]
 9: /usr/lib/x86_64-linux-gnu/libstdc++.so.6(+0xbd6df) [0x7fb219c076df]
 10: /lib/x86_64-linux-gnu/libpthread.so.0(+0x76db) [0x7fb21a2e66db]
 11: clone()
/ceph/teuthology-archive/trociny-2021-02-21_11:18:03-rbd-wip-mgolub-testing-distro-basic-smithi/5900265/remote/smithi181/log/cluster2-client.mirror.1.47883.log.gz:

2021-02-21T12:21:13.472+0000 7f5d22120700 -1 /build/ceph-17.0.0-971-gf57f6ff0/src/tools/rbd_mirror/ImageReplayer.cc: In function 'rbd::mirror::ImageReplayer<ImageCtxT>::handle_update_mirror_
image_replay_status(int)::<lambda(int)> [with I = librbd::ImageCtx]' thread 7f5d22120700 time 2021-02-21T12:21:13.452149+0000
/build/ceph-17.0.0-971-gf57f6ff0/src/tools/rbd_mirror/ImageReplayer.cc: 699: FAILED ceph_assert(m_update_status_task != nullptr)

 ceph version 17.0.0-971-gf57f6ff0 (f57f6ff08fac47da951bb8b6ee6407b3af5e5e37) quincy (dev)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x14b) [0x7f5d2a7c9c2d]
 2: (ceph::__ceph_assertf_fail(char const*, char const*, int, char const*, char const*, ...)+0) [0x7f5d2a7c9e08]
 3: (LambdaContext<rbd::mirror::ImageReplayer<librbd::ImageCtx>::handle_update_mirror_image_replay_status(int)::{lambda(int)#2}>::finish(int)+0x1ae) [0x55b62f70407e]
 4: (Context::complete(int)+0x9) [0x55b62f68b499]
 5: (boost::asio::detail::completion_handler<boost::asio::detail::work_dispatcher<librbd::asio::ContextWQ::queue(Context*, int)::{lambda()#1}> >::do_complete(void*, boost::asio::detail::scheduler_operation*, boost::system::error_code const&, unsigned long)+0x56) [0x55b62f68b8f6]
 6: (boost::asio::detail::strand_service::do_complete(void*, boost::asio::detail::scheduler_operation*, boost::system::error_code const&, unsigned long)+0x7d) [0x55b62f7f264d]
 7: /usr/lib/librados.so.2(+0xb67bf) [0x7f5d33c1b7bf]
 8: /usr/lib/librados.so.2(+0xb6af6) [0x7f5d33c1baf6]
 9: /usr/lib/x86_64-linux-gnu/libstdc++.so.6(+0xbd6df) [0x7f5d297a66df]
 10: /lib/x86_64-linux-gnu/libpthread.so.0(+0x76db) [0x7f5d29e856db]
 11: clone()

Related issues 2 (0 open2 closed)

Copied to rbd - Backport #49452: octopus: [rbd-mirror] ImageReplayer.cc: 699: FAILED ceph_assert(m_update_status_task != nullptr)ResolvedMykola GolubActions
Copied to rbd - Backport #49453: pacific: [rbd-mirror] ImageReplayer.cc: 699: FAILED ceph_assert(m_update_status_task != nullptr)ResolvedJason DillamanActions
Actions #1

Updated by Mykola Golub about 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 39625
Actions #2

Updated by Jason Dillaman about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49452: octopus: [rbd-mirror] ImageReplayer.cc: 699: FAILED ceph_assert(m_update_status_task != nullptr) added
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49453: pacific: [rbd-mirror] ImageReplayer.cc: 699: FAILED ceph_assert(m_update_status_task != nullptr) added
Actions #5

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF